# fractal-renderer

./: .coderabbit.yaml  .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README.md.orig  README_BACKUP_9111.md  README_REMOTE_9111.md  THIRD_PARTY_LICENSES.md  automate-example-conversion.py  automate-explore-conversion.py  automate-name-normalization.py  out_binary_test_data  package-lock.json  package.json
.cargo/: config.toml
.claude/: settings.json
.github/workflows/: basic_checks.yml
benches/: benchmark.rs  julia_spiral.json  mandelbrot_default.json  mandelbrot_ice_fracture.json
docs/: color-editor-gui-plan.md  gui-unification-roadmap.md  phase-2-detailed-plan.md  phase-3-detailed-plan.md
examples/: default.json
examples/barnsley_fern/: default.json  shadow_fern.json  shadow_fern_QHD.json
examples/color-gui-demo/: main.rs  params.json
examples/color-map-editor-demo/: main.rs  params.json
examples/color_swatch/: black_blue_white.json  color_wheel.json  rainbow.json  random_colors.json  red_green_blue.json  special.json  wikipedia.json
examples/common/: mod.rs
examples/ddp_render/: ddp_HD_with_antialias.json  ddp_QHD_with_antialias.json  ddp_low_res_antialias.json  default.json  default_high_res.json  default_low_res.json  default_low_res_series.json  default_series.json  default_with_strong_antialiasing.json  high_res_series.json
examples/driven_damped_pendulum/: ddp_HD_with_antialias.json  (+6 more)
scripts/: migrate_phase_2_render_options.py  migrate_phase_3_color_maps.py
src/: barnsley_fern.rs  chaos_game.rs  cli.rs  ddp_cycle.rs  ddp_utils.rs  file_io.rs  histogram.rs  image_buffer.rs  image_utils.rs  lib.rs  main.rs  mandelbrot.rs  mandelbrot_core.rs  mandelbrot_search.rs  mandelbrot_utils.rs  numerical_methods.rs  ode_solvers.rs  pixel_iter.rs  render.rs  serpinsky.rs
tests/: example_parameter_validation_tests.rs  full_cli_integration_and_regression_tests.rs  histogram.rs  mandelbrot_core.rs  phase_2_pixel_equivalence_tests.rs
(+190 files in other folders)
