[package]
name = "fractal-renderer"
version = "0.2.0"
authors = ["Matthew Peter Kelly <matthew.kelly2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5"
bincode = "1.3"
chrono = "0.4"
clap = {version = "4.3.8", features = [ "derive" ]}
glob = "0.3.1"
image = "0.24"
iter_num_tools = "0.7.1"
more-asserts = "0.2"
nalgebra = { version = "0.29", features = [ "serde-serialize" ]}
num-traits =  "0.2"
ordered-float = "3.0"
pixels = "0.13"
rand = "0"
rayon = "1.8.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
winit = "0.28"
winit_input_helper = "0.14"
